--- a/multiple-factory-default/apps/frontend/views/index.phtml
+++ b/multiple-factory-default/apps/frontend/views/index.phtml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Phalcon PHP Framework</title>
+		<title>Phalcon Framework</title>
 	</head>
 	<body>
 		<?php echo $this->getContent(); ?>
