Fixed code style

--- a/multiple/apps/frontend/views/products/index.phtml
+++ b/multiple/apps/frontend/views/products/index.phtml
@@ -2,4 +2,4 @@
 
 <?php echo $product->name ?>
 
-<?php echo $this->url(array('controller' => 'products', 'action' => 'algo')) ?>
+<?php echo $this->url(['controller' => 'products', 'action' => 'algo']) ?>
