--- a/multiple/apps/frontend/views/products/index.phtml
+++ b/multiple/apps/frontend/views/products/index.phtml
@@ -2,4 +2,4 @@
 
 <?php echo $product->name ?>
 
-<?php echo $this->url(['controller' => 'products', 'action' => 'algo']) ?>
+<?php echo $this->url->get(['for' => 'frontend-product', 'controller' => 'products', 'action' => 'algo']) ?>
